# mona-ai-hackathon

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  MonaAI_Pitch.pptx  PITCH.md  README.md  STATE.md  pyproject.toml  run.sh
.streamlit/: config.toml
agents/: analytics.py  aufenthg.py  fraud.py  gaps.py  interview.py  invoices.py  permits.py  pricing.py  pricing_product.py  reels.py  secure_intake.py  shift.py
alembic/: env.py
alembic/versions/: acc981dd630a_initial_schema.py  p2shiftcols_p2_shift_columns.py
api/: main.py
api/routes/: analytics.py  fraud.py  gaps.py  interview.py  invoices.py  permits.py  pricing.py  reels.py  secure_intake.py  shift.py
app/: Home.py
app/pages/: 01_Globus_Invoices.py  02_UKS_Shift_Replacement.py  03_Leistenschneider_Work_Permits.py  04_Persowerk_CV_Certificate.py  05_Kohlpharma_Interview.py  06_Theiss_Reel_Studio.py  07_Theiss_Targeting_Analytics.py  08_Theiss_Dynamic_Pricing.py  (+2 more)
core/: agent.py  auth.py  config.py  db.py  guard.py  ingest.py  llm.py  rag.py  schemas.py  ui.py
docs/: google_apps_script_roster.gs
evals/: invoices_demo.py  invoices_eval.py  permits_eval.py
scripts/: build_deck.js  verify_all.py
services/: fraud.py  interview.py  invoices.py  permits.py  pricing.py  roster_sink.py  roster_sink_apps_script.py  roster_sink_google.py  secure_intake.py  shift.py
tests/: conftest.py  test_fraud_ai_writing.py  test_fraud_consistency.py  test_fraud_forensics.py  test_fraud_scoring.py  test_fraud_service.py  test_fraud_verify.py  test_invoices.py  test_permits.py  test_pricing.py  test_roster_sink.py  test_secure_intake.py  test_shift.py
(+50 files in other folders)
