[project]
name = "mona-hackathon"
version = "0.1.0"
description = "Mona AI Hackathon 2026 — 10 customer agents in one Streamlit app"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "streamlit>=1.40",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pillow>=10.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "moviepy>=2.0",
    "gtts>=2.5",
    "google-genai>=2.9.0",
    "ollama>=0.6.2",
    "sqlmodel>=0.0.38",
    "alembic>=1.18.4",
    "httpx>=0.28.1",
    "chromadb>=1.5.9",
]

[tool.uv]
package = false
